first makeup inlcuding calendly

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AI Tool - Tailwind CSS Template for AI Tools</title>
+    <title>Aynzam AI</title>
+    <!-- Calendly integration -->
+    <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+    <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
   </head>
 
   <body
@@ -58,26 +61,24 @@
               <img src="./images/hero/icon-title.svg" alt="icon" />
 
               <span class="hero-subtitle-text">
-                Your Ultimate Creative Companion!
+                Your Ultimate Knowledge Management Companion!
               </span>
             </a>
             <h1
               class="mb-6 text-3xl font-extrabold text-white sm:text-5xl xl:text-heading-1"
             >
-              Elevate Your Content with Our AI-Powered Writing Tool
+              Access Your Organization's Knowledge Instantly with AI
             </h1>
             <p class="max-w-[500px] mx-auto mb-9 font-medium md:text-lg">
-              Highly customizable Tailwind CSS template for AI - Tool, Startup,
-              Software, App and Product Sites. Comes with everything you need -
-              pages, features, sections, components and more that you can easily
-              customize.
+              Transform how your teams find and use enterprise knowledge with our AI-powered knowledge assistant. Boost productivity, enhance collaboration, and retain critical information.
             </p>
 
             <a
               href="#"
               class="inline-flex py-3 font-medium text-white duration-300 ease-in rounded-lg hero-button-gradient px-7 hover:opacity-80"
+              onclick="Calendly.initPopupWidget({url: 'https://calendly.com/mustafayasin/30min'});return false;"
             >
-              Start Your Free Trial
+              Book a Demo
             </a>
           </div>
         </div>
@@ -109,9 +110,7 @@
               Key Features of Our Tool
             </h2>
             <p class="max-w-[714px] mx-auto mb-5 font-medium">
-              Our AI writing tool is designed to empower you with exceptional
-              writing capabilities, making the writing process more efficient,
-              accurate, and enjoyable.
+              Our AI platform enables employees to access and utilize organizational knowledge effortlessly, enhancing efficiency, collaboration, and knowledge retention.
             </p>
           </div>
 
@@ -136,14 +135,15 @@
                   <span
                     class="icon-border relative max-w-[80px] w-full h-20 rounded-full inline-flex items-center justify-center mb-8 mx-auto"
                   >
-                    <img src="./images/features/icon-01.svg" alt="icon" />
+                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                      <path d="M21 2l-2 2m-7.61 7.61a5.5 5.5 0 1 1-7.778 7.778 5.5 5.5 0 0 1 7.777-7.777zm0 0L15.5 7.5m0 0l3 3L22 7l-3-3m-3.5 3.5L19 4"></path>
+                    </svg>
                   </span>
                   <h4 class="mb-4 text-lg font-semibold text-white">
-                    Intelligent Writing Assistance
+                    Unified Knowledge Access
                   </h4>
                   <p class="font-medium">
-                    Our AI writing tool analyzes your content, suggests
-                    improvements,
+                    Connects and centralizes internal sources into a single, searchable interface.
                   </p>
                 </div>
               </div>
@@ -159,13 +159,18 @@
                   <span
                     class="icon-border relative max-w-[80px] w-full h-20 rounded-full inline-flex items-center justify-center mb-8 mx-auto"
                   >
-                    <img src="./images/features/icon-02.svg" alt="icon" />
+                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                      <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path>
+                      <circle cx="12" cy="10" r="2"></circle>
+                      <path d="M12 8v0"></path>
+                      <path d="M12 12v0"></path>
+                    </svg>
                   </span>
                   <h4 class="mb-4 text-lg font-semibold text-white">
-                    Grammar and Spell Check
+                    Smart AI Chat Assistant
                   </h4>
                   <p class="font-medium">
-                    Say goodbye to embarrassing typos and grammar mistakes
+                    Delivers accurate, context-aware answers to natural language queries.
                   </p>
                 </div>
               </div>
@@ -181,14 +186,17 @@
                   <span
                     class="icon-border relative max-w-[80px] w-full h-20 rounded-full inline-flex items-center justify-center mb-8 mx-auto"
                   >
-                    <img src="./images/features/icon-03.svg" alt="icon" />
+                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                      <circle cx="12" cy="12" r="10"></circle>
+                      <line x1="12" y1="8" x2="12" y2="12"></line>
+                      <line x1="12" y1="16" x2="12.01" y2="16"></line>
+                    </svg>
                   </span>
                   <h4 class="mb-4 text-lg font-semibold text-white">
-                    Plagiarism Detection
+                    Knowledge Gap Detection
                   </h4>
                   <p class="font-medium">
-                    Originality is key, and our AI writing tool helps you
-                    maintain it
+                    Eliminate time wasted searching for information and help teams focus on high-value work that drives your business forward.
                   </p>
                 </div>
               </div>
@@ -209,14 +217,17 @@
                   <span
                     class="icon-border relative max-w-[80px] w-full h-20 rounded-full inline-flex items-center justify-center mb-8 mx-auto"
                   >
-                    <img src="./images/features/icon-04.svg" alt="icon" />
+                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                      <rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect>
+                      <path d="M7 11V7a5 5 0 0 1 10 0v4"></path>
+                      <circle cx="12" cy="16" r="1"></circle>
+                    </svg>
                   </span>
                   <h4 class="mb-4 text-lg font-semibold text-white">
-                    Voice to Text Conversion
+                    Enterprise-Grade Data Security
                   </h4>
                   <p class="font-medium">
-                    Transform your spoken words into written text easily &
-                    effortlessly
+                    Built to handle sensitive data with encryption and access control.
                   </p>
                 </div>
               </div>
@@ -232,14 +243,19 @@
                   <span
                     class="icon-border relative max-w-[80px] w-full h-20 rounded-full inline-flex items-center justify-center mb-8 mx-auto"
                   >
-                    <img src="./images/features/icon-05.svg" alt="icon" />
+                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                      <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
+                      <polyline points="14 2 14 8 20 8"></polyline>
+                      <line x1="16" y1="13" x2="8" y2="13"></line>
+                      <line x1="16" y1="17" x2="8" y2="17"></line>
+                      <polyline points="10 9 9 9 8 9"></polyline>
+                    </svg>
                   </span>
                   <h4 class="mb-4 text-lg font-semibold text-white">
-                    Style and Tone Adaptation
+                    Intelligent Content Structuring
                   </h4>
                   <p class="font-medium">
-                    Whether you need a professional, or positive tone it has
-                    everyone
+                    Transforms unstructured documents into searchable, organized knowledge.
                   </p>
                 </div>
               </div>
@@ -255,13 +271,19 @@
                   <span
                     class="icon-border relative max-w-[80px] w-full h-20 rounded-full inline-flex items-center justify-center mb-8 mx-auto"
                   >
-                    <img src="./images/features/icon-06.svg" alt="icon" />
+                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                      <polyline points="16 3 21 3 21 8"></polyline>
+                      <line x1="4" y1="20" x2="21" y2="3"></line>
+                      <path d="M21 16v5h-5"></path>
+                      <line x1="15" y1="15" x2="21" y2="21"></line>
+                      <line x1="4" y1="4" x2="9" y2="9"></line>
+                    </svg>
                   </span>
                   <h4 class="mb-4 text-lg font-semibold text-white">
-                    Content Generation
+                    Scalable Integration
                   </h4>
                   <p class="font-medium">
-                    Need inspiration or assistance with generating content?
+                    Easily adapts across teams and systems for seamless enterprise deployment.
                   </p>
                 </div>
               </div>
@@ -289,16 +311,14 @@
                         <img src="./images/hero/icon-title.svg" alt="icon" />
 
                         <span class="hero-subtitle-text">
-                          AI-Powered Writing Tool
+                          AI-Powered Knowledge Platform
                         </span>
                       </span>
                       <h3 class="text-white mb-4.5 font-bold text-heading-4">
-                        Intelligent Writing Assistance
+                        AI-Powered Knowledge Discovery
                       </h3>
                       <p class="mb-10 font-medium">
-                        Our AI writing tool is designed to empower you with
-                        exceptional writing capabilities, making the writing
-                        process...
+                        Our platform connects your team with the information they need, when they need it, making knowledge discovery fast and intuitive.
                       </p>
                       <a
                         href="#"
@@ -321,7 +341,7 @@
                     </div>
 
                     <div class="max-w-[428px] w-full hidden sm:block">
-                      <img src="./images/features/big-icon.svg" alt="icon" />
+                      <img src="./images/features/big-icon.svg" alt="Knowledge Platform" />
                     </div>
                   </div>
 
@@ -378,16 +398,19 @@
                     <span
                       class="icon-border relative max-w-[80px] w-full h-20 rounded-full inline-flex items-center justify-center mb-13.5 mx-auto"
                     >
-                      <img src="./images/features/icon-05.svg" alt="icon" />
+                      <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
+                        <circle cx="9" cy="7" r="4"></circle>
+                        <path d="M23 21v-2a4 4 0 0 0-3-3.87"></path>
+                        <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
+                      </svg>
                     </span>
 
                     <h3 class="text-white mb-4.5 font-semibold text-heading-6">
-                      Empowering Writing Excellence
+                      Enhanced Team Collaboration
                     </h3>
                     <p class="font-medium">
-                      Our AI writing tool is designed to empower you with
-                      exceptional writing capabilities, making the writing
-                      process...
+                      Our platform connects your team with the information they need, when they need it, making knowledge discovery fast and intuitive.
                     </p>
                   </div>
 
@@ -441,15 +464,17 @@
                     <span
                       class="icon-border relative max-w-[80px] w-full h-20 rounded-full inline-flex items-center justify-center mb-13.5 mx-auto"
                     >
-                      <img src="./images/features/icon-07.svg" alt="icon" />
+                      <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <circle cx="12" cy="12" r="10"></circle>
+                        <polyline points="12 6 12 12 16 14"></polyline>
+                      </svg>
                     </span>
 
                     <h3 class="text-white mb-4.5 font-semibold text-heading-6">
-                      Grammar and Spell Check
+                      Enhanced Team Productivity
                     </h3>
                     <p class="font-medium">
-                      Our AI writing tool is designed to empower you with
-                      exceptional writing capabilities.
+                      Eliminate time wasted searching for information and help teams focus on high-value work that drives your business forward.
                     </p>
                   </div>
 
@@ -493,7 +518,7 @@
       <!-- ====== Pricing Section Start -->
       <section
         id="pricing"
-        class="relative z-20 overflow-hidden pt-22.5 lg:pt-27.5 xl:pt-32.5 scroll-mt-17"
+        class="relative z-20 overflow-hidden pt-22.5 lg:pt-27.5 xl:pt-32.5 scroll-mt-17 hidden"
       >
         <div class="max-w-[1170px] mx-auto px-4 sm:px-8 xl:px-0">
           <!-- bg circles -->
@@ -556,10 +581,13 @@
               class="max-w-[50px] w-full h-[250px] relative pricing-grid pricing-grid-border"
             ></div>
             <div
-              class="max-w-[50px] w-full h-[250px] relative pricing-grid pricing-grid-border"
+              class="max-w-[50px] w-full h-[250px] relative pricing-grid pricing-grid-border bottom-2"
             ></div>
             <div
-              class="max-w-[50px] w-full h-[250px] relative pricing-grid pricing-grid-border"
+              class="max-w-[50px] w-full h-[250px] relative pricing-grid pricing-grid-border bottom-5"
+            ></div>
+            <div
+              class="max-w-[50px] w-full h-[250px] relative pricing-grid pricing-grid-border bottom-8"
             ></div>
           </div>
 
@@ -880,7 +908,7 @@
       <!-- ====== User Section Start -->
       <section
         x-data="{ 'showContent': false, 'scrollContent': false, }"
-        class="relative z-20 overflow-hidden pt-22.5 lg:pt-27.5 xl:pt-32.5 2xl:pt-45 pb-20"
+        class="relative z-20 overflow-hidden pt-22.5 lg:pt-27.5 xl:pt-32.5 2xl:pt-45 pb-20 hidden"
       >
         <div class="max-w-[1170px] mx-auto px-4 sm:px-8 xl:px-0">
           <!-- section title -->
@@ -1947,7 +1975,7 @@
       <!-- ====== User Section End -->
 
       <!-- ====== Clients Section Start -->
-      <section class="py-19">
+      <section class="py-19 hidden">
         <div class="max-w-[1104px] mx-auto px-4 sm:px-8 xl:px-0">
           <div class="relative z-10 overflow-hidden">
             <span
@@ -2085,7 +2113,7 @@
       <!-- ====== Clients Section End -->
 
       <!-- ====== Support Section Start -->
-      <section id="support" class="scroll-mt-17">
+      <section id="support" class="scroll-mt-17 mt-20">
         <div class="max-w-[1104px] mx-auto px-4 sm:px-8 xl:px-0">
           <div
             class="relative z-999 overflow-hidden rounded-[30px] bg-dark pt-25 px-4 sm:px-20 lg:px-27.5"
@@ -2173,9 +2201,7 @@
                 Contact With Us
               </h2>
               <p class="max-w-[714px] mx-auto font-medium">
-                Our AI writing tool is designed to empower you with exceptional
-                writing capabilities, making the writing process more efficient,
-                accurate, and enjoyable.
+                Interested in transforming how your organization manages knowledge? Reach out to our team to discuss how our AI platform can address your specific needs.
               </p>
             </div>
 
@@ -2255,7 +2281,7 @@
       <!-- ====== Support Section End -->
 
       <!-- ====== Blog Section Start -->
-      <section class="py-20 lg:py-25">
+      <section class="py-20 lg:py-25 hidden">
         <div class="max-w-[1170px] mx-auto px-4 sm:px-8 xl:px-0">
           <!-- section title -->
           <div class="mb-16 text-center wow fadeInUp">
@@ -2582,7 +2608,7 @@
               >
                 <img src="./images/hero/icon-title.svg" alt="icon" />
 
-                <span class="hero-subtitle-text"> Try our tool for Free </span>
+                <span class="hero-subtitle-text"> Try our platform </span>
               </span>
               <h2
                 class="text-white mb-4.5 text-2xl font-extrabold sm:text-4xl xl:text-heading-2"
@@ -2590,16 +2616,15 @@
                 What are you waiting for?
               </h2>
               <p class="max-w-[714px] mx-auto font-medium mb-9">
-                Our AI writing tool is designed to empower you with exceptional
-                writing capabilities, making the writing process more efficient,
-                accurate, and enjoyable.
+                Join leading organizations that are already transforming how their teams access and utilize knowledge. Experience the power of AI-enhanced knowledge management today.
               </p>
 
               <a
                 href="#"
                 class="inline-flex py-3 font-medium text-white duration-300 ease-in rounded-lg hero-button-gradient px-7 hover:opacity-80"
+                onclick="Calendly.initPopupWidget({url: 'https://calendly.com/mustafayasin/30min'});return false;"
               >
-                Get Started for Free
+                Book a Demo
               </a>
             </div>
           </div>
@@ -2616,7 +2641,7 @@
                 News & Update
               </h3>
               <p class="font-medium">
-                Keep up to date with everything about our tool
+                Stay informed about new features and improvements to our knowledge platform
               </p>
             </div>
             <div class="max-w-[534px] w-full">
