--- a/src/signin.html
+++ b/src/signin.html
@@ -168,7 +168,7 @@
 
                   <button type="submit"
                     class="hero-button-gradient flex justify-center w-full rounded-lg py-3 px-7 text-white font-medium ease-in duration-300 hover:opacity-80">
-                    Sign in with AI Tool
+                    Sign in with Aynzam AI
                   </button>
 
                   <p class="text-center font-medium text-white mt-5">
